[tool.poetry]
name = "workout_api"
version = "0.1.0"
packages = [
    { include = "app" },
]
description = "A custom workout app to fit my needs"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
alembic = "^1.8.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
certifi = "^2022.6.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"
ipython = "^8.4.0"
black = "^22.6.0"
types-passlib = "^1.7.7"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.39"}
types-python-jose = "^3.3.4"
requests = "^2.28.1"
anyio = "^3.6.1"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
