[tool.poetry]
name = "workout_api"
version = "0.1.0"
packages = [
    { include = "app" },
]
description = "A custom workout app to fit my needs"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^2.0.0"
alembic = "^1.9.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
certifi = "^2022.12.7"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^1.0.0"
flake8 = "^4.0.1"
ipython = "^8.10.0"
black = "^22.6.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"
httpx = "^0.23.0"
anyio = "^3.6.1"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
types-psycopg2 = "^2.9.21.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
