[tool.poetry]
name = "workout_api"
version = "0.1.0"
packages = [
    { include = "app" },
]
description = "A custom workout app to fit my needs"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
SQLAlchemy = "^2.0.20"
alembic = "^1.11.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.7"
bcrypt = "^4.0.1"
certifi = "^2023.7.22"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pydantic = "^1.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
ipython = "^8.14.0"
black = "^23.7.0"
types-passlib = "^1.7.7.13"
types-python-jose = "^3.3.4.8"
httpx = "^0.24.1"
anyio = "^3.7.1"
coverage = "^7.3.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
# E711 doesn't play nice with sqlalchemy filter.
ignore = ["E501", "E711"]
